--- a/pythagorasanswer.njk
+++ b/pythagorasanswer.njk
@@ -1,13 +1,11 @@
 {% extends 'partials/layout.njk' %}
 {% block content %}
-    <h1>Spythagoras equations</h1>
-<p>
-        <i>S = πp2<i> <b>{{ a }}</b>
+    <h1>Pythagoras equations</h1>
+    <p>
+        <i>a = <i> <b>{{ a }}</b>
+        <i>b = <i> <b>{{ b }}</b>
     </p>
     <p>
-        <b>C = 2πr<sup>2</sup> = a * a = <i> <b>{{ a }}</b>
-    </p>
-    <p>
-        <b>V = 4*πr3/3<sup>3</sup> = a * a * a = <i> <b>{{ a }}</b>
+        <i> C = a² + b² = c² = <i> <b>{{ C }}</b>
     </p>
 {% endblock %}
