--- a/circle.njk
+++ b/circle.njk
@@ -1,10 +1,10 @@
 {% extends 'partials/layout.njk' %}
 {% block content %}
-    <h1>circle</h1>
+    <h1>Circle</h1>
     <form action="/circleanswer">
-        <label>
-            a:
-            <input type="number" name="a" placeholder="a">
+        <label for "r">
+            r:
+            <input type="number" name="r" placeholder="r">
         </label>    
         <button>Submit</button>
     </form>
