--- a/circleanswer.njk
+++ b/circleanswer.njk
@@ -2,6 +2,15 @@
 {% block content %}
     <h1>Circle equations</h1>
     <p>
-        <i>a = <i> <b>{{ a }}</b>
+        <i>r = <i> <b>{{ r }}</b>
+    </p>
+    <p>
+        <i>S = π * r<sub>2</sub> =<i> <b>{{ S }}</b>
+    </p>
+    <p>
+        <i>C = 2 * π * r =<i> <b>{{ C }}</b>
+    </p>
+    <p>
+        <i>V = 4/3 * π * r<sub>2</sub> =<i> <b>{{ V }}</b>
     </p>
 {% endblock %}
