--- a/pythagoras.njk
+++ b/pythagoras.njk
@@ -1,10 +1,12 @@
 {% extends 'partials/layout.njk' %}
 {% block content %}
-    <h1>pythagoras</h1>
+    <h1>Pythagoras</h1>
     <form action="/pythagorasanswer">
         <label>
             a:
             <input type="number" name="a" placeholder="a">
+            b:
+            <input type="number" name="b" placeholder="b">
         </label>    
         <button>Submit</button>
     </form>
