--- a/square.njk
+++ b/square.njk
@@ -2,7 +2,7 @@
 {% block content %}
     <h1>Square</h1>
     <form action="/squareanswer">
-        <label>
+        <label for="a">
             a:
             <input type="number" name="a" placeholder="a">
         </label>    
